--- a/src/components/MegaAd.css
+++ b/src/components/MegaAd.css
@@ -2,8 +2,8 @@
   position: sticky;
   top: 0;
   width: 200px;
-  height: 100vh;
-  min-height: 100vh;
+  height: auto;
+  max-height: 90vh;
   margin: 0;
   background: #fffbe6;
   border-radius: 18px;
@@ -15,7 +15,7 @@
   z-index: 10;
 }
 .mega-ad img {
-  width: 10%;
+  width: 100%;
   height: auto;
   max-height: 90vh;
   object-fit: cover;
