--- a/src/components/CitySearchBar.css
+++ b/src/components/CitySearchBar.css
@@ -20,7 +20,7 @@
   background: white;
   border-radius: 50px;
   padding: 6px;
-  box-shadow: 0px 3px 10px rgba(0,0,0,0.15);
+  box-shadow: 0 3px 10px rgb(0 0 0 / 15%);
 }
 
 .search-bar input {
@@ -48,7 +48,7 @@
   background: #a10f24;
 }
 
-@media (max-width: 600px) {
+@media (width <= 600px) {
   .search-wrapper {
     margin-top: 18px;
   }
