--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar-wrapper {
   width: 100%;
   background: #ffca00;
-  font-family: 'Noto Sans Kannada', \"Inter\", system-ui, sans-serif;
+  font-family: 'Noto Sans Kannada', "\"Inter\"", system-ui, sans-serif;
 }
 
 .navbar-top {
