--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   background: #e8e8e8;
-  font-family: 'Noto Sans Kannada', "Inter", system-ui, sans-serif;
+  font-family: 'Noto Sans Kannada', Inter, system-ui, sans-serif;
 }
 
 * {
