--- a/src/pages/OrderSuccess/OrderSuccess.css
+++ b/src/pages/OrderSuccess/OrderSuccess.css
@@ -10,7 +10,7 @@
   background: white;
   padding: 40px;
   border-radius: 16px;
-  box-shadow: 0 3px 12px rgba(0,0,0,0.1);
+  box-shadow: 0 3px 12px rgb(0 0 0 / 10%);
   text-align: center;
   max-width: 400px;
 }
@@ -22,7 +22,7 @@
 }
 
 .os-order-id {
-  margin: 10px 0 20px 0;
+  margin: 10px 0 20px;
   font-size: 16px;
 }
 
