--- a/src/pages/PaymentPage.css
+++ b/src/pages/PaymentPage.css
@@ -38,7 +38,7 @@
   padding: 20px;
   background: #fff;
   border-radius: 12px;
-  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 6px rgb(0 0 0 / 10%);
 }
 
 .qr-box {
@@ -80,6 +80,7 @@
   border: none;
   margin-top: 20px;
 }
+
 .upload-box {
   margin-top: 15px;
   padding: 10px;
